[package]
name = "openapi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version= "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
http = "0.2.9"
tokio = {version="1.28.1", features = ["rt", "macros"]}
serde_json = "1.0"