[package]
name = "openapi-sdk"
version = "0.1.1"
authors = ["Michael Cuffaro (@maiku1008)", "Openapi® <hello@openapi.com>"]
edition = "2021"
description = "A fully-featured and blazing-fast Rust API client to interact with Openapi®"
license = "MIT"
categories = ["api-bindings", "web-programming", "asynchronous", "authentication", "development-tools"]
documentation = "https://console.openapi.com/"
homepage = "https://openapi.com/"
keywords = ["openapi", "sdk", "client"]
readme = "docs/crates-io.md"
repository = "https://github.com/openapi/openapi-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version= "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
http = "0.2.9"
tokio = {version="1.28.1", features = ["rt", "macros"]}
serde_json = "1.0"
